fix(images): fixes image layout shift
also removes gastby meta generator tag

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -99,11 +99,14 @@ nav a {
   margin-right: 0.5em;
 }
 
-.award {
+.portfolio_item img,
+.about_header img {
+  aspect-ratio: 1/1;
 }
 
 .job_date,
-.award_date {
+.award_date,
+.about_header {
   align-items: flex-end;
   justify-content: center;
   display: flex;
